Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
None
-
-
3363496a7 (dev), a3bf450b2 (6.7), 4043d7ebc (6.6), 582bf926b (tqtc/lts-6.5), 10ba74ebc (dev), a25b5eafc (6.7), fd893ee8d (6.6), ca9a5fb53 (tqtc/lts-6.5)
Description
In order to reproduce it, just download the test video
https://drive.google.com/uc?export=download&id=1Iiv31GZzTM0dEOoyNS2Rgnt-ccGXNWvE
and open it in mediaplayer example.
If the reference doesn't work, it should be reproduced with other high quality videos (this one is HDR 60fps with HEVC codec)
AR: the playback is bumpy, frames are rendered in the incorrect order.
ER: smooth video playback
Hints.
The most probable reason is the function D3D11TextureConverter::getTextures,
which converts each ffmpeg frame encapsulating ID3D11Texture2D to D3D11 frame for direct rendering. This is a kind of optimization, you may turn it off to make the example work, if always return nullptr from getTextures.
Ideally, we should investigate the root of the problem and fix the function. If it's impossible by some reason, investigate how much the optimization affects the performance and probably turn it off for some cases.
Attachments
Issue Links
- relates to
-
QTBUG-113832 6.5.1 Qt MM crashes when playing a simple mp4 on AMD cards
-
- Closed
-
-
QTBUG-109213 Video flickering when there is a ParticleSystem component or playing some animation at same time
-
- Closed
-
-
QTBUG-111459 Heavy jittering in video playback if animations are active
-
- Closed
-
-
QTBUG-111543 Heavy flickering with 60 fps videos
-
- Closed
-
-
QTBUG-115308 Fix DirectX texture propagation from FFMPEG to RHI
-
- Closed
-
-
QTBUG-111911 Some videos has artifacts when playing in MediaPlayer.
-
- Closed
-
-
QTBUG-111544 Video shows green strip at bottom
-
- Closed
-
-
QTBUG-114778 Reg->6.3.2/Windows: QMediaPlayer shows green bar; status out of sync
-
- Closed
-
-
QTBUG-117099 Video jerks when playing (Windows backend)
-
- Closed
-